--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Document</title>
-    <link href="/style/style.css" rel="stylesheet" type="text/css" />
-    <link href="/style/box2.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="/box2.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="head">
@@ -24,14 +24,14 @@
           <h1 id="r1">Ramya Health Care</h1>
         </div>
         <div class="ram2">
-            <img src="/image/bg_1.jpg" class="img1"/> 
+            <img src="/bg_1.jpg" class="img1"/> 
         </div>
         
     </div>
 
     <div class="box2">
         <div class="boxx1">
-          <img src="/image/Fitness.png" class="img2"/>
+          <img src="/Fitness.png" class="img2"/>
             <a href="/ex.html" target="_blank"><h3 id="daily">daily exercises</h3></a>
         </div>
         <div class="boxx2">
